--- a/index.html
+++ b/index.html
@@ -10,16 +10,34 @@
 <body>
 
   <div class="wrapper">
-    <header class="header"></header>
+
+    <header class="header">
+      <a href="#" class="header__logo">Around The World</a>
+
+      <!-- Burger Menu -->
+      <div class="menu-btn"></div>
+
+      <div class="header__navigation">
+        <div class="header__navigation-items">
+          <a class="header__navigation-item" href="#">Home</a>
+          <a class="header__navigation-item" href="#">Test__1</a>
+          <a class="header__navigation-item" href="#">Test__2</a>
+          <a class="header__navigation-item" href="#">Test__3</a>
+        </div>
+      </div>
+    </header>
 
     <main class="main">
       <div class="main__container">
-        <script src="world-map.js"></script>
+        <div class="main__world-map">
+          <script src="world-map.js"></script>
+        </div>
       </div>
     </main>
 
     <footer class="footer"></footer>
   </div>
 
+  <script src="menu.js"></script>
 </body>
 </html>
